Fixes border covering email subscription

--- a/styleguide/source/assets/scss/03-organisms/_footer.scss
+++ b/styleguide/source/assets/scss/03-organisms/_footer.scss
@@ -141,12 +141,6 @@
     }
   }
 
-  .container > div:not(:last-child) {
-    @include gutter($padding-bottom-half...);
-    @include gutter($margin-bottom-half...);
-    border-bottom: 1px solid $gray-50;
-  }
-
   @include breakpoint($bp-small) {
     > .container {
       display: flex;
@@ -172,8 +166,11 @@
     }
 
     &__menu-products {
+      @include gutter($padding-top-half...);
+      @include gutter($margin-top-half...);
       order: 4;
       flex: 1 100%;
+      border-top: 1px solid $gray-50;
     }
 
     &__mission {
